cluster_outs/IGC-222411.out
  File "Run_rebuild_ECPEDN.py", line 50
    
    ^
SyntaxError: EOF while scanning triple-quoted string literal
